credible interval abbr

--- a/kaggle/submission.Rmd
+++ b/kaggle/submission.Rmd
@@ -137,7 +137,7 @@ For each player, the posterior mean provides an estimate for their ability to ma
 Patrick Mahomes stands out as the top QB according our measure, adding the ability to time snaps as another element to his success.
 Other high-caliber QBs such as Tom Brady and Josh Allen are also among the leaders in our rankings.
 Note that there is considerable uncertainty in our estimates, as demonstrated by the rather wide credible intervals (CIs), which is unsurprising given our limited sample of motion plays.
-Still, we observe substantial differences in the credible intervals across this subset of QBs.
+Still, we observe substantial differences in the CIs across this subset of QBs.
 For instance, the 95% CI for Daniel Jones (who ranks last in our leaderboard) does not overlap with the top five quarterbacks' 95% CIs.
 
 ```{r}
